# desten-discord-bot

./: .env  .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: run-bot.yaml
src/: __init__.py
src/database/: __init__.py  models.py
src/instance/: __init__.py
src/ui/: __init__.py
